Changed what ive done section and fix input spacing in bottom form

--- a/main.css
+++ b/main.css
@@ -193,35 +193,12 @@ the same column */
         margin-left: 120px;
         
     }
-  }
-
-@media only screen 
-and (min-width: 1024px) 
-and (max-height: 1366px) 
-and (orientation: portrait) 
-and (-webkit-min-device-pixel-ratio: 1.5)  {
-    .filler-me{
-        grid-column: 3/6;
-        grid-row: 1/5;
-        /* max-width: 100%; */
-        justify-self: center;
-        align-self: center;
-        max-width: 100%;
-        width: 100%;
-    }
-}
-
-@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
-    .filler-me{
-        grid-column: 3/6;
-        grid-row: 1/5;
-        /* max-width: 100%; */
-        justify-self: center;
-        align-self: center;
-        max-width: 100%;
-        width: 100%;
+    .view-github{
+      width: 92%;
     }
   }
+
+
 
 .path1{
 
@@ -316,7 +293,7 @@ and (-webkit-min-device-pixel-ratio: 1.5)  {
 }
 
 .what-ive-cont{
-    margin-left: 1.3%;
+    /* margin-left: 1.3%; */
     margin-top: 11.18%;
 }
 
@@ -342,6 +319,46 @@ and (-webkit-min-device-pixel-ratio: 1.5)  {
 
   .regular{
     margin: 6%;
+  }
+
+  .view-github {
+    border-radius: 75px;
+    background: #FFF;
+    box-shadow: 0px 0px 52px 0px rgba(234, 234, 234, 0.85);
+
+
+    display: flex;
+    width: 84%;
+    /* padding: 31px 227px; */
+    justify-content: space-around;
+    align-items: center;
+    /* gap: 180px; */
+  }
+
+  /* .view-github div {
+    flex: 25%;
+  } */
+
+  .view-github svg{
+    width: clamp(57px,8.08vw,124px);
+    height: auto;
+  }
+
+  .view-github-midde{
+    color: #000;
+    text-align: center;
+    font-family: "Open Sans Light";
+    /* font-size: 48px; */
+    font-size: clamp(0.75rem, 5vw - 1rem, 3rem);;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    letter-spacing: 4.8px;
+  }
+
+  .center-what-ive-done{
+    display: flex;
+    justify-content: center;
   }
 
   .skills-cont{
@@ -476,7 +493,12 @@ and (-webkit-min-device-pixel-ratio: 1.5)  {
   .center-flex{
     display: flex;
     justify-content: center;
-    gap: 2%;
+    /* gap: 2%; */
+    gap: 8px;
+  }
+  .center-flex-textarea{
+    display: flex;
+    justify-content: center;
   }
   .wrap-flex{
     flex-wrap: wrap;
@@ -552,6 +574,26 @@ and (-webkit-min-device-pixel-ratio: 1.5)  {
   #contact-form {
     width: 80%;
   }
+
+}
+
+@media only screen and (max-width: 768px) {
+
+  .view-github{
+    width: 92%;
+    padding: 1%;
+    box-sizing: border-box;
+  }
+
+  /* .center-flex{
+    gap: 4px;
+  } */
+
+  .center-flex-textarea{
+    margin-top: 8px;
+  }
+
+
 
 }
 
